Responsividade e ajuste inicial da busca por codigo

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="assets/icons/sign-language.svg">
 </head>
 <body class="dark">
-  <app-root></app-root>
+  <app-root id="app-jogo-libras"></app-root>
 </body>
 </html>
